added cotent warning

--- a/public/index.html
+++ b/public/index.html
@@ -22,20 +22,26 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Sammy Robens-Paradise | Design & Develop </title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>oh man! It looks like you don't have javascript enabled, you need to enable it before viewing this web application.</noscript>
     <div id="root" class="load"></div>
     <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+      DEVELOPED AND DESIGNED BY SAMMY ROBENS-PARADISE 
+      SYSTEMS DESIGN ENGINEERING, THE UNIVERSITY OF WATERLOO
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+      IF YOU ARE REAADING THIS, IT IS BECAUSE YOU ARE INSPECTING MY WEB APP OR SOMETHING
+      HAS GONE TERRIBLY WRONG!. IN ANY CASE, PLEASE CONTACT ME AT
+      srobensp@edu.uwaterloo.ca FOR INTERESTS OR TO REPORT ANY ISSUES
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
+     SAMMY ROBENS-PARADISE © 2018-2019
+
+      DISTRIBUTION OF CODE,COPY OR IMAGE CONTENT WITHOUT WRITTEN CONSENT OF
+      SAMUEL ROBENS-PARADISE IS PROHIBITED UNLESS
+      ACCESSED THROUGH PUBLIC DOIMAIN SUCH AS GITHUB
+      OR ANY OTHER OPEN SOURCE PLATFORM ON WHICH [THIS] ASSET
+      WAS PUBLISHED WITH AUTHOR CONSENT
     -->
   </body>
 </html>
