--- a/public/index.html
+++ b/public/index.html
@@ -31,11 +31,11 @@
       DEVELOPED AND DESIGNED BY SAMMY ROBENS-PARADISE 
       SYSTEMS DESIGN ENGINEERING, THE UNIVERSITY OF WATERLOO
 
-      IF YOU ARE REAADING THIS, IT IS BECAUSE YOU ARE INSPECTING MY WEB APP OR SOMETHING
+      IF YOU ARE READING THIS, IT IS BECAUSE YOU ARE INSPECTING MY WEB APP OR SOMETHING
       HAS GONE TERRIBLY WRONG!. IN ANY CASE, PLEASE CONTACT ME AT
-      srobensp@edu.uwaterloo.ca FOR INTERESTS OR TO REPORT ANY ISSUES
+      srobensp@edu.uwaterloo.ca FOR INTEREST OR TO REPORT ANY ISSUES
 
-     SAMMY ROBENS-PARADISE © 2018-2019
+      SAMMY ROBENS-PARADISE © 2018-2019
 
       DISTRIBUTION OF CODE,COPY OR IMAGE CONTENT WITHOUT WRITTEN CONSENT OF
       SAMUEL ROBENS-PARADISE IS PROHIBITED UNLESS
