added navigation support for resume

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Sammy Robens-Paradise | Design & Develop </title>
+    <title>Sammy Robens-Paradise | Design & Develop With Me</title>
   </head>
   <body>
     <noscript>oh man! It looks like you don't have javascript enabled, you need to enable it before viewing this web application.</noscript>
@@ -29,18 +29,40 @@
     <!--
       DEVELOPED AND DESIGNED BY SAMMY ROBENS-PARADISE 
       SYSTEMS DESIGN ENGINEERING, THE UNIVERSITY OF WATERLOO
+      
+      IF YOU ARE READING THIS, IT IS BECAUSE YOU ARE INTERESTED IN MY CODE!
+      THANKS FOR TAKING AN INTEREST!
+                           !
+                           ^
+                          / \
+                         /___\
+                        |=   =|
+                        |     |
+                        |  T  |
+                        |  H  |
+                        |  A  |
+                        |  N  |
+                        |  K  |
+                        |  S  |
+                        |     |
+                        |     |
+                       /|##!##|\
+                      / |##!##| \
+                     /  |##!##|  \
+                    |  / ^ | ^ \  |
+                    | /  ( | )  \ |
+                    |/   ( | )   \|
+                        ((   ))
+                       ((  :  ))
+                       ((  :  ))
+                        ((   ))
+                         (( ))
+                          ( )
+                           .
+                           .
+                           .
 
-      IF YOU ARE READING THIS, IT IS BECAUSE YOU ARE INSPECTING MY WEB APP OR SOMETHING
-      HAS GONE TERRIBLY WRONG!. IN ANY CASE, PLEASE CONTACT ME AT
-      srobensp@edu.uwaterloo.ca FOR INTEREST OR TO REPORT ANY ISSUES
-
-      SAMMY ROBENS-PARADISE © 2018-2019
-
-      DISTRIBUTION OF CODE,COPY OR IMAGE CONTENT WITHOUT WRITTEN CONSENT OF
-      SAMUEL ROBENS-PARADISE IS PROHIBITED UNLESS
-      ACCESSED THROUGH PUBLIC DOIMAIN SUCH AS GITHUB
-      OR ANY OTHER OPEN SOURCE PLATFORM ON WHICH [THIS] ASSET
-      WAS PUBLISHED WITH AUTHOR CONSENT
+      SAMMY ROBENS-PARADISE © 2019 🐧
     -->
   </body>
 </html>
