--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-    <meta charset="utf-8" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
-    <meta name="theme-color" content="#000000" />
-    <!--
+<meta charset="utf-8" />
+<link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+<meta name="theme-color" content="#000000" />
+<!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
+<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+<!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
@@ -21,12 +18,26 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Sammy Robens-Paradise | Design & Develop With Me</title>
-  </head>
-  <body>
-    <noscript>oh man! It looks like you don't have javascript enabled, you need to enable it before viewing this web application.</noscript>
-    <div id="root" class="load"></div>
-    <!--
+<title>Sammy Robens-Paradise | Design & Develop With Me</title>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-134982598-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+
+  function gtag() {
+    dataLayer.push(arguments);
+  }
+  gtag('js', new Date());
+
+  gtag('config', 'UA-134982598-1');
+</script>
+</head>
+
+<body>
+  <noscript>oh man! It looks like you don't have javascript enabled, you need to enable it before viewing this web
+    application.</noscript>
+  <div id="root" class="load"></div>
+  <!--
       DEVELOPED AND DESIGNED BY SAMMY ROBENS-PARADISE 
       SYSTEMS DESIGN ENGINEERING, THE UNIVERSITY OF WATERLOO
       
@@ -64,5 +75,6 @@
 
       SAMMY ROBENS-PARADISE © 2019 🐧
     -->
-  </body>
+</body>
+
 </html>
