--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <meta charset="utf-8" />
 <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
-<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
 <meta name="theme-color" content="#000000" />
 <!--
       manifest.json provides metadata used when your web app is added to the
@@ -33,7 +33,7 @@
 </script>
 </head>
 
-<body>
+<body style="width:100%">
   <noscript>oh man! It looks like you don't have javascript enabled, you need to enable it before viewing this web
     application.</noscript>
   <div id="root" class="load"></div>
