added responsive css for resume page

--- a/public/index.html
+++ b/public/index.html
@@ -34,8 +34,10 @@
 </head>
 
 <body style="width:100%">
-  <noscript>oh man! It looks like you don't have javascript enabled, you need to enable it before viewing this web
-    application.</noscript>
+  <noscript>oh man! It looks like you don't have javascript enabled, you need to enable it before viewing this web application;
+Français: On dirait que javascript n'est pas activé, vous devez l'activer avant de visualiser ce site Web.
+application.
+  </noscript>
   <div id="root" class="load"></div>
   <!--
       DEVELOPED AND DESIGNED BY SAMMY ROBENS-PARADISE 
@@ -43,6 +45,7 @@
       
       IF YOU ARE READING THIS, IT IS BECAUSE YOU ARE INTERESTED IN MY CODE!
       THANKS FOR TAKING AN INTEREST!
+
                            !
                            ^
                           / \
@@ -73,8 +76,11 @@
                            .
                            .
 
+      ALL ART, ICONS. JPG, SVG, PNG, GIF, MOV MATERIAL 
+      FEATURED ON THIS WEB APP CREATED BY:                     
       SAMMY ROBENS-PARADISE © 2019 🐧
-    -->
+      srobensparadise@gmail.com
+-->
 </body>
 
 </html>
