begain implementing react-router-dom

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <meta charset="utf-8" />
 <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
-<meta name="theme-color" content="#000000" />
+<meta name="theme-color" content="#03030C" />
 <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -34,9 +34,10 @@
 </head>
 
 <body style="width:100%">
-  <noscript>oh man! It looks like you don't have javascript enabled, you need to enable it before viewing this web application;
-Français: On dirait que javascript n'est pas activé, vous devez l'activer avant de visualiser ce site Web.
-application.
+  <noscript>oh man! It looks like you don't have javascript enabled, you need to enable it before viewing this web
+    application;
+    Français: On dirait que javascript n'est pas activé, vous devez l'activer avant de visualiser ce site Web.
+    application.
   </noscript>
   <div id="root" class="load"></div>
   <!--
