added meta data content

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,14 @@
       homescreen on Android. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
 <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+<meta name="description" content="UX Designer, Artist, Developer and Student">
+  <meta name="keywords" content="Design,Coding,Developer,Development,UI,UX,user experience,user interface,engineering,systems design engineering,systems,code,program,art,artist,waterloo,vancouver,finger food,studio">
+  <meta name="author" content="Sammy Robens-Paradise">
+  <meta property="og:title" content="Sammy Robens-Paradise | Design & Develop With Me">
+  <meta property="og:description" content="UX Designer,Developer, and waterloo engineering student, from Vancouver BC">
+  <meta property="og:image" content="%PUBLIC_URL%/meta-card-portfolio.png">
+  <meta property="og:url" content="https://portfolio-app-1091c.firebaseapp.com/">
+  <meta property="og:site_name" content="Sammy Robens-Paradise | Design & Develop With Me">
 <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -19,7 +27,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
 <title>Sammy Robens-Paradise | Design & Develop With Me</title>
-<!-- Global site tag (gtag.js) - Google Analytics -->
+<!-- Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-134982598-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
