updated meta data

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
   <meta name="keywords" content="Design,Coding,Developer,Development,UI,UX,user experience,user interface,engineering,systems design engineering,systems,code,program,art,artist,waterloo,vancouver,finger food,studio">
   <meta name="author" content="Sammy Robens-Paradise">
   <meta property="og:title" content="Sammy Robens-Paradise | Design & Develop With Me">
-  <meta property="og:description" content="UX Designer,Developer, and waterloo engineering student, from Vancouver BC">
+  <meta property="og:description" content="UX Designer,Developer, and Waterloo Engineering Student ⚙️, from Vancouver BC ⛰️">
   <meta property="og:image" content="%PUBLIC_URL%/meta-card-portfolio.png">
   <meta property="og:url" content="https://sammy.world/">
   <meta property="og:site_name" content="Sammy Robens-Paradise | Design & Develop With Me">
