--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
 <meta name="theme-color" content="#03030C" />
 <!--
-      manifest.json provides metadata used when your web app is added to the
-      homescreen on Android. See https://developers.google.com/web/fundamentals/web-app-manifest/
+      manifest.json provides metadata
     -->
 <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 <meta name="description" content="UX Designer, Artist, Developer and Student">
