updated urls to go to firebase site

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
   <meta property="og:title" content="Sammy Robens-Paradise | Design & Develop With Me">
   <meta property="og:description" content="UX Designer,Developer, and Waterloo Engineering Student ⚙️, from Vancouver BC ⛰️">
   <meta property="og:image" content="%PUBLIC_URL%/meta-card-portfolio.png">
-  <meta property="og:url" content="https://sammy.world/">
+  <meta property="og:url" content="https://portfolio-app-1091c.firebaseapp.com/">
   <meta property="og:site_name" content="Sammy Robens-Paradise | Design & Develop With Me">
 
 <title>Sammy Robens-Paradise | Design & Develop With Me</title>
